--- a/Makefile.target
+++ b/Makefile.target
@@ -619,6 +619,8 @@ ifdef CONFIG_SLIRP
 CPPFLAGS+=-I$(SRC_PATH)/slirp
 endif
 
+LIBS+=$(PCAPLIBS)
+
 # specific flags are needed for non soft mmu emulator
 ifdef CONFIG_STATIC
 LDFLAGS+=-static
